<resources>
    <string name="app_name">Voice Calculator</string>

    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>



    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="decimalPoint">.</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="times">x</string>
    <string name="divide">/</string>
    <string name="openBracket">(</string>
    <string name="closedBracket">)</string>
    <string name="power">X<sup>2</sup></string>
    <string name="exponent">e</string>
    <string name="factorial">x!</string>
    <string name="sqrt">√</string>


    <string name="delete">DEL</string>
    <string name="AC">AC</string>

    <string name="equal">=</string>
    <string name="negative">+/-</string>



</resources>
