<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ramy.voicecalculator.MainActivity"
    android:orientation="vertical"

    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.30"
        android:textSize="30sp"
        android:id="@+id/textView" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageButton
            android:id="@+id/btnSpeak"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@mipmap/mic_icon"
            android:layout_centerHorizontal="true"
            android:onClick="speak"

            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.125"
        >

        <Button
            android:id="@+id/openBracket"
            android:text="@string/openBracket"
            android:onClick="openBracket"
            style="@style/ButtonStyle"

            />



        <Button
            android:id="@+id/closedBracket"
            android:text="@string/closedBracket"
            android:onClick="closedBracket"
            style="@style/ButtonStyle"
            />


        <Button
            android:id="@+id/power"
            android:onClick="power"
            style="@style/ButtonStyle"
            />

        <Button
            android:id="@+id/sqrt"
            android:text="@string/sqrt"
            android:onClick="clickSqrt"
            style="@style/ButtonStyle"
            />

        <Button
            android:id="@+id/factorial"
            android:text="@string/factorial"
            android:onClick="factorial"
            style="@style/ButtonStyle"
            />



    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.125"
    >


        <Button
            android:id="@+id/seven"
            android:text="@string/seven"
            android:onClick="clickSeven"
            style="@style/ButtonStyle"
            />

        <Button
            android:id="@+id/eight"
            android:text="@string/eight"
            android:onClick="clickEight"
            style="@style/ButtonStyle"
            />

        <Button
            android:id="@+id/nine"
            android:text="@string/nine"
            android:onClick="clickNine"
            style="@style/ButtonStyle"
            />

        <Button
            android:id="@+id/delete"
            android:text="@string/delete"
            android:onClick="clickDelete"
            style="@style/ButtonStyle"
            />



        <Button
            android:id="@+id/AC"
            android:text="@string/AC"
            android:onClick="erase"
            style="@style/ButtonStyle"
            />

    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.125"
            >


        <Button
            android:id="@+id/four"
            android:text="@string/four"
            android:onClick="clickFour"
            style="@style/ButtonStyle"
            />


        <Button
            android:id="@+id/five"
            android:text="@string/five"
            android:onClick="clickFive"
            style="@style/ButtonStyle"
            />

        <Button
            android:id="@+id/six"
            android:text="@string/six"
            android:onClick="clickSix"
            style="@style/ButtonStyle"
            />

        <Button
            android:id="@+id/times"
            android:text="@string/times"
            android:onClick="multiply"
            style="@style/ButtonStyle"
            />


        <Button
            android:id="@+id/divide"
            android:text="@string/divide"
            android:onClick="divide"
            style="@style/ButtonStyle"
            />




    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.125"
            >

        <Button
            android:id="@+id/one"
            android:text="@string/one"
            android:onClick="clickOne"
            style="@style/ButtonStyle"
            />

        <Button
            android:id="@+id/two"
            android:text="@string/two"
            android:onClick="clickTwo"
            style="@style/ButtonStyle"
            />


        <Button
            android:id="@+id/three"
            android:text="@string/three"
            android:onClick="clickThree"
            style="@style/ButtonStyle"
            />


        <Button
            android:id="@+id/plus"
            android:text="@string/plus"
            android:onClick="add"
            style="@style/ButtonStyle"
            />


        <Button
            android:id="@+id/minus"
            android:text="@string/minus"
            android:onClick="subtract"
            style="@style/ButtonStyle"
            />

        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.125"
    >
        <Button
            android:id="@+id/zero"
            android:text="@string/zero"
            android:onClick="clickZero"
            style="@style/ButtonStyle"
            />

        <Button
            android:id="@+id/decimalPoint"
            android:text="@string/decimalPoint"
            android:onClick="clickDot"
            style="@style/ButtonStyle"
            />

        <Button
            android:id="@+id/negative"
            android:text="@string/negative"
            android:onClick="negative"
            style="@style/ButtonStyle"
            />

        <Button
            android:id="@+id/equal"
            android:text="@string/equal"
            android:onClick="equal"
            android:layout_weight="0.4"
            style="@style/ButtonStyle"
            />


    </LinearLayout>



</LinearLayout>
